# war-room

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: build.yml
scripts/: make-icon.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgendaView.tsx  DayView.tsx  FixedEventForm.tsx  Header.tsx  Modal.tsx  MonthView.tsx  PassphraseGate.tsx  ProjectPanel.tsx  ProjectsView.tsx  SettingsPanel.tsx  TaskPanel.tsx  TimelineColumn.tsx  UpdateNotifier.tsx  WarRoomStatus.tsx  WeekView.tsx
src/components/planner/: MaterialsPopover.tsx  PlannerColumn.tsx  PlannerView.tsx  TaskPalette.tsx  dragState.ts
src/lib/: db.ts  defaults.ts  manual.ts  occurrences.ts  supabase.ts  types.ts  ui.ts
src/scheduler/: schedule.test.ts  schedule.ts
src/store/: selectors.ts  usePlanner.ts  useSchedules.ts  useStore.ts
