[package]
name = "war-room"
version = "0.6.0"
description = "Shared auto-scheduling war room"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

# The Tauri app is a library + a thin binary that calls into it. This is the
# layout Tauri v2 expects.
[lib]
name = "war_room_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auto-updater: checks a signed feed and applies updates without reinstalling.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# This feature is used for production builds where `devUrl` is disabled.
custom-protocol = ["tauri/custom-protocol"]
